--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=50472&amp;path=livereload" data-no-instant defer></script>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -11,7 +11,7 @@ https://github.com/alex-shpak/hugo-book
 <meta name="description" content="">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/404.html">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:50472/404.html">
   <meta property="og:site_name" content="Tori">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en_us">
@@ -23,12 +23,12 @@ https://github.com/alex-shpak/hugo-book
 <title>404 Page not found | Tori</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="http://localhost:50472/404.html">
 <link rel="stylesheet" href="/book.min.cc2c524ed250aac81b23d1f4af87344917b325208841feca0968fe450f570575.css" integrity="sha256-zCxSTtJQqsgbI9H0r4c0SRezJSCIQf7KCWj&#43;RQ9XBXU=" crossorigin="anonymous">
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.003f50774149d869d1b439cf7a1c5cbe44afacb0359b6527fbc3f8aa6997040b.js" integrity="sha256-AD9Qd0FJ2GnRtDnPehxcvkSvrLA1m2Un&#43;8P4qmmXBAs=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.d64150470d9fa6bf3209978844af8585184366e4ed0c9c279d539442dc183a08.js" integrity="sha256-1kFQRw2fpr8yCZeIRK&#43;FhRhDZuTtDJwnnVOUQtwYOgg=" crossorigin="anonymous"></script>
 
 
 
