--- a/public/brouillon/index.html
+++ b/public/brouillon/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=50472&amp;path=livereload" data-no-instant defer></script>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -14,7 +14,7 @@ Lorem markdownum insigne. Olympo signis Delphis! Retexi Nereius nova develat str
 ">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/brouillon/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:50472/brouillon/">
   <meta property="og:site_name" content="Tori">
   <meta property="og:title" content="Brouillons">
   <meta property="og:description" content="Les Brouillons#Bonjour voici la page concacré à n’importe quoi
@@ -33,15 +33,15 @@ Lorem markdownum insigne. Olympo signis Delphis! Retexi Nereius nova develat str
 <title>Brouillons | Tori</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/brouillon/">
+<link rel="canonical" href="http://localhost:50472/brouillon/">
 <link rel="stylesheet" href="/book.min.cc2c524ed250aac81b23d1f4af87344917b325208841feca0968fe450f570575.css" integrity="sha256-zCxSTtJQqsgbI9H0r4c0SRezJSCIQf7KCWj&#43;RQ9XBXU=" crossorigin="anonymous">
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.003f50774149d869d1b439cf7a1c5cbe44afacb0359b6527fbc3f8aa6997040b.js" integrity="sha256-AD9Qd0FJ2GnRtDnPehxcvkSvrLA1m2Un&#43;8P4qmmXBAs=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.d64150470d9fa6bf3209978844af8585184366e4ed0c9c279d539442dc183a08.js" integrity="sha256-1kFQRw2fpr8yCZeIRK&#43;FhRhDZuTtDJwnnVOUQtwYOgg=" crossorigin="anonymous"></script>
 
 
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/brouillon/index.xml" title="Tori" />
+<link rel="alternate" type="application/rss+xml" href="http://localhost:50472/brouillon/index.xml" title="Tori" />
 
   
 </head>
@@ -146,8 +146,8 @@ Lorem markdownum insigne. Olympo signis Delphis! Retexi Nereius nova develat str
   
 
   
-    <a href="/projet/projet0/" class="">
-      Projet 0</a>
+    <a href="/projet/projet1/" class="">
+      Hello Pico</a>
   
 
         </li>
@@ -160,8 +160,8 @@ Lorem markdownum insigne. Olympo signis Delphis! Retexi Nereius nova develat str
   
 
   
-    <a href="/projet/projet1/" class="">
-      Projet 1</a>
+    <a href="/projet/projet0/" class="">
+      Projet 0</a>
   
 
         </li>
