--- a/public/projet/index.html
+++ b/public/projet/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=50472&amp;path=livereload" data-no-instant defer></script>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -12,7 +12,7 @@ https://github.com/alex-shpak/hugo-book
 ">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/projet/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:50472/projet/">
   <meta property="og:site_name" content="Tori">
   <meta property="og:title" content="Les Projets">
   <meta property="og:description" content="Les projets#Bonjour voici la première page sur les projets">
@@ -27,15 +27,15 @@ https://github.com/alex-shpak/hugo-book
 <title>Les Projets | Tori</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/projet/">
+<link rel="canonical" href="http://localhost:50472/projet/">
 <link rel="stylesheet" href="/book.min.cc2c524ed250aac81b23d1f4af87344917b325208841feca0968fe450f570575.css" integrity="sha256-zCxSTtJQqsgbI9H0r4c0SRezJSCIQf7KCWj&#43;RQ9XBXU=" crossorigin="anonymous">
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.003f50774149d869d1b439cf7a1c5cbe44afacb0359b6527fbc3f8aa6997040b.js" integrity="sha256-AD9Qd0FJ2GnRtDnPehxcvkSvrLA1m2Un&#43;8P4qmmXBAs=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.d64150470d9fa6bf3209978844af8585184366e4ed0c9c279d539442dc183a08.js" integrity="sha256-1kFQRw2fpr8yCZeIRK&#43;FhRhDZuTtDJwnnVOUQtwYOgg=" crossorigin="anonymous"></script>
 
 
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/projet/index.xml" title="Tori" />
+<link rel="alternate" type="application/rss+xml" href="http://localhost:50472/projet/index.xml" title="Tori" />
 
   
 </head>
@@ -140,8 +140,8 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/projet/projet0/" class="">
-      Projet 0</a>
+    <a href="/projet/projet1/" class="">
+      Hello Pico</a>
   
 
         </li>
@@ -154,8 +154,8 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/projet/projet1/" class="">
-      Projet 1</a>
+    <a href="/projet/projet0/" class="">
+      Projet 0</a>
   
 
         </li>
@@ -269,8 +269,8 @@ https://github.com/alex-shpak/hugo-book
     </span>
     <span>
     
-      <a href="/projet/projet0/" class="flex align-center">
-        <span>Projet 0</span>
+      <a href="/projet/projet1/" class="flex align-center">
+        <span>Hello Pico</span>
         <img src="/icons/forward.svg" class="book-icon" alt="Forward" />
       </a>
     
