ajout TP, page TP1

--- a/public/projet/hellopico/index.html
+++ b/public/projet/hellopico/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=57372&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=62434&amp;path=livereload" data-no-instant defer></script>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -12,7 +12,7 @@ https://github.com/alex-shpak/hugo-book
 LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void loop() { Serial.println(i); analogWrite(25, 50); Serial.println(&#34; Allume&#34;); delay(500); digitalWrite(25, 0); Serial.println(&#34; Eteint&#34;); delay(1000); i&#43;&#43;; }">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:57372/projet/projet1/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:62434/projet/hellopico/">
   <meta property="og:site_name" content="Tori">
   <meta property="og:title" content="Hello Pico">
   <meta property="og:description" content="Minis programmes Pour Raspbery Pi Pico#L’équivalent du célèbre Hello World avec des microcontroleurs serait sans doute de faire clignoté la led integré !
@@ -30,12 +30,12 @@ LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void l
 <title>Hello Pico | Tori</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:57372/projet/projet1/">
+<link rel="canonical" href="http://localhost:62434/projet/hellopico/">
 <link rel="stylesheet" href="/book.min.cc2c524ed250aac81b23d1f4af87344917b325208841feca0968fe450f570575.css" integrity="sha256-zCxSTtJQqsgbI9H0r4c0SRezJSCIQf7KCWj&#43;RQ9XBXU=" crossorigin="anonymous">
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.02321c818062b7bb2d8c6d21bcfeb4be57b5ad85e0cce3082ba779afaaf9a52b.js" integrity="sha256-AjIcgYBit7stjG0hvP60vle1rYXgzOMIK6d5r6r5pSs=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.e28069285b6d0287425f3d121293972c6b460845843b1ae0985adb56df448bfd.js" integrity="sha256-4oBpKFttAodCXz0SEpOXLGtGCEWEOxrgmFrbVt9Ei/0=" crossorigin="anonymous"></script>
 
 
 
@@ -142,7 +142,7 @@ LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void l
   
 
   
-    <a href="/projet/projet1/" class="active">
+    <a href="/projet/hellopico/" class="active">
       Hello Pico</a>
   
 
@@ -186,7 +186,7 @@ LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void l
   
     <input type="checkbox" id="section-95b6326eda5a9f89f535563b50a16c85" class="toggle"  />
     <label for="section-95b6326eda5a9f89f535563b50a16c85" class="flex">
-      <a href="/projet/tp-cours/" class="">
+      <a role="button" class="">
         Tp Cours</a>
       <img src="/icons/chevron-right.svg" class="book-icon" alt="Expand" />
     </label>
