--- a/public/projet/tp-cours/index.html
+++ b/public/projet/tp-cours/index.html
@@ -11,19 +11,19 @@ https://github.com/alex-shpak/hugo-book
 <meta name="description" content="">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:62434/categories/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:62434/projet/tp-cours/">
   <meta property="og:site_name" content="Tori">
-  <meta property="og:title" content="Categories">
+  <meta property="og:title" content="Tori">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
 
-  <meta itemprop="name" content="Categories">
+  <meta itemprop="name" content="Tori">
 
-<title>Categories | Tori</title>
+<title>Tp Cours | Tori</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:62434/categories/">
+<link rel="canonical" href="http://localhost:62434/projet/tp-cours/">
 <link rel="stylesheet" href="/book.min.cc2c524ed250aac81b23d1f4af87344917b325208841feca0968fe450f570575.css" integrity="sha256-zCxSTtJQqsgbI9H0r4c0SRezJSCIQf7KCWj&#43;RQ9XBXU=" crossorigin="anonymous">
 
 
@@ -31,11 +31,11 @@ https://github.com/alex-shpak/hugo-book
   <script defer src="/en.search.min.e28069285b6d0287425f3d121293972c6b460845843b1ae0985adb56df448bfd.js" integrity="sha256-4oBpKFttAodCXz0SEpOXLGtGCEWEOxrgmFrbVt9Ei/0=" crossorigin="anonymous"></script>
 
 
-<link rel="alternate" type="application/rss+xml" href="http://localhost:62434/categories/index.xml" title="Tori" />
+<link rel="alternate" type="application/rss+xml" href="http://localhost:62434/projet/tp-cours/index.xml" title="Tori" />
 
   
 </head>
-<body dir="ltr" class="book-kind-taxonomy book-type-categories">
+<body dir="ltr" class="book-kind-section book-type-projet">
   <input type="checkbox" class="hidden toggle" id="menu-control" />
   <input type="checkbox" class="hidden toggle" id="toc-control" />
   <main class="container flex">
@@ -178,9 +178,9 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <input type="checkbox" id="section-95b6326eda5a9f89f535563b50a16c85" class="toggle"  />
+    <input type="checkbox" id="section-95b6326eda5a9f89f535563b50a16c85" class="toggle" checked />
     <label for="section-95b6326eda5a9f89f535563b50a16c85" class="flex">
-      <a role="button" class="">
+      <a role="button" class="active">
         Tp Cours</a>
       <img src="/icons/chevron-right.svg" class="book-icon" alt="Expand" />
     </label>
@@ -262,7 +262,7 @@ https://github.com/alex-shpak/hugo-book
     <img src="/icons/menu.svg" class="book-icon" alt="Menu" />
   </label>
 
-  <h3>Categories</h3>
+  <h3>Tp Cours</h3>
 
   <label for="toc-control">
     
