--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@ https://github.com/alex-shpak/hugo-book
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.a5997fb3236b5ed7f680c51aff9bc33e379609f14e7f5e734206a6d862e9ae27.js" integrity="sha256-pZl/syNrXtf2gMUa/5vDPjeWCfFOf15zQgam2GLpric=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.dc02933a8a3be3e61d2fd1dcbf28da19784a668eb9d53c32cfd299f66d7ba276.js" integrity="sha256-3AKTOoo74&#43;YdL9HcvyjaGXhKZo651Twyz9KZ9m17onY=" crossorigin="anonymous"></script>
 
 
 
