--- a/public/index.html
+++ b/public/index.html
@@ -9,26 +9,26 @@ https://github.com/alex-shpak/hugo-book
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Bonjour#Bienvenue sur mon site de projets !
-J’ai créé ce site pour pouvoir répertorier les projets que je fait pour pouvoir en apprendre plus !
+<meta name="description" content="Bonjour#heyBienvenue sur mon site experimental de projets !
+J’ai créé ce site pour pouvoir répertorier les projets que je fait pour en apprendre plus !
 Voir les projets \||/| @___oo/\ /\ / (__,,,,|) /^\) ^\/ _)) /^\/ _)) _ / / _)/\ )/\/ || | )_)&lt; &gt; |(,,) )__)|| / \)___)\| \____( )___) )___\______(_______;;; __;;;">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
 <meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/">
   <meta property="og:site_name" content="Tori">
   <meta property="og:title" content="Tori">
-  <meta property="og:description" content="Bonjour#Bienvenue sur mon site de projets !
-J’ai créé ce site pour pouvoir répertorier les projets que je fait pour pouvoir en apprendre plus !
+  <meta property="og:description" content="Bonjour#heyBienvenue sur mon site experimental de projets !
+J’ai créé ce site pour pouvoir répertorier les projets que je fait pour en apprendre plus !
 Voir les projets \||/| @___oo/\ /\ / (__,,,,|) /^\) ^\/ _)) /^\/ _)) _ / / _)/\ )/\/ || | )_)&lt; &gt; |(,,) )__)|| / \)___)\| \____( )___) )___\______(_______;;; __;;;">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
 
   <meta itemprop="name" content="Tori">
-  <meta itemprop="description" content="Bonjour#Bienvenue sur mon site de projets !
-J’ai créé ce site pour pouvoir répertorier les projets que je fait pour pouvoir en apprendre plus !
+  <meta itemprop="description" content="Bonjour#heyBienvenue sur mon site experimental de projets !
+J’ai créé ce site pour pouvoir répertorier les projets que je fait pour en apprendre plus !
 Voir les projets \||/| @___oo/\ /\ / (__,,,,|) /^\) ^\/ _)) /^\/ _)) _ / / _)/\ )/\/ || | )_)&lt; &gt; |(,,) )__)|| / \)___)\| \____( )___) )___\______(_______;;; __;;;">
-  <meta itemprop="wordCount" content="66">
+  <meta itemprop="wordCount" content="67">
 
 <title>Tori</title>
 <link rel="icon" href="/favicon.png" >
@@ -38,7 +38,7 @@ Voir les projets \||/| @___oo/\ /\ / (__,,,,|) /^\) ^\/ _)) /^\/ _)) _ / / 
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.a5997fb3236b5ed7f680c51aff9bc33e379609f14e7f5e734206a6d862e9ae27.js" integrity="sha256-pZl/syNrXtf2gMUa/5vDPjeWCfFOf15zQgam2GLpric=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.dc02933a8a3be3e61d2fd1dcbf28da19784a668eb9d53c32cfd299f66d7ba276.js" integrity="sha256-3AKTOoo74&#43;YdL9HcvyjaGXhKZo651Twyz9KZ9m17onY=" crossorigin="anonymous"></script>
 
 
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="Tori" />
@@ -67,8 +67,9 @@ Voir les projets \||/| @___oo/\ /\ / (__,,,,|) /^\) ^\/ _)) /^\/ _)) _ / / 
       
       
   <article class="markdown book-article"><h1 id="bonjour">Bonjour<a class="anchor" href="#bonjour">#</a></h1>
-<p>Bienvenue sur mon site de projets !</p>
-<p>J&rsquo;ai créé ce site pour pouvoir répertorier les projets que je fait pour pouvoir en apprendre plus !</p>
+<div align=center>hey</div>
+<p>Bienvenue sur mon site experimental de projets !</p>
+<p>J&rsquo;ai créé ce site pour pouvoir répertorier les projets que je fait pour en apprendre plus !</p>
 <a class="book-btn"href="/projet/">Voir les projets</a>
 <pre tabindex="0"><code>
                 \||/
