--- a/public/brouillon/index.html
+++ b/public/brouillon/index.html
@@ -44,7 +44,7 @@ Et d’autre moins#Left Content#Lorem markdownum insigne. Olympo signis Delphi
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.dc02933a8a3be3e61d2fd1dcbf28da19784a668eb9d53c32cfd299f66d7ba276.js" integrity="sha256-3AKTOoo74&#43;YdL9HcvyjaGXhKZo651Twyz9KZ9m17onY=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.7860279adb4f5169342cc6e84e2c0d6cf7c392cfc63e7759e8367fd9724f817c.js" integrity="sha256-eGAnmttPUWk0LMboTiwNbPfDks/GPndZ6DZ/2XJPgXw=" crossorigin="anonymous"></script>
 
 
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/brouillon/index.xml" title="Tori" />
