--- a/public/brouillon/index.html
+++ b/public/brouillon/index.html
@@ -44,7 +44,7 @@ Et d’autre moins#Left Content#Lorem markdownum insigne. Olympo signis Delphi
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.8b51b15887f54a89b58ea798e77427e378ed67110f0caf26ee96f454a55cd9ea.js" integrity="sha256-i1GxWIf1Som1jqeY53Qn43jtZxEPDK8m7pb0VKVc2eo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
 
 
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/brouillon/index.xml" title="Tori" />
@@ -355,7 +355,7 @@ Et d’autre moins#Left Content#Lorem markdownum insigne. Olympo signis Delphi
 <p>Bonjour voici la page concacré à n&rsquo;importe quoi</p>
 <div class="book-katex">\[ 
 f(x) = \int_{-\infty}^\infty\hat f(\xi)\,e^{2 \pi i \xi x}\,d\xi
- \]</div>
+ \]</div><link rel="stylesheet" href="/katex/katex.min.css" /><script defer src="/katex/katex.min.js"></script><script defer src="/katex/auto-render.min.js" onload="renderMathInElement(document.body, {&#34;delimiters&#34;:[{&#34;left&#34;:&#34;$$&#34;,&#34;right&#34;:&#34;$$&#34;,&#34;display&#34;:true},{&#34;left&#34;:&#34;\\(&#34;,&#34;right&#34;:&#34;\\)&#34;,&#34;display&#34;:false},{&#34;left&#34;:&#34;\\[&#34;,&#34;right&#34;:&#34;\\]&#34;,&#34;display&#34;:true}]});"></script>
 <blockquote class='book-hint tip'>
 <p><strong>Hey</strong><br>
 Lorem markdownum insigne. Olympo signis Delphis! Retexi Nereius nova develat
