--- a/public/tp/tp1/index.html
+++ b/public/tp/tp1/index.html
@@ -42,7 +42,7 @@ int compt; // nm clic btn int led1; int led2; int led3; void setup() { Serial.be
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.8b51b15887f54a89b58ea798e77427e378ed67110f0caf26ee96f454a55cd9ea.js" integrity="sha256-i1GxWIf1Som1jqeY53Qn43jtZxEPDK8m7pb0VKVc2eo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
 
 
 
@@ -455,7 +455,7 @@ les programmes sont à remanier</p></blockquote><span class="book-badge success"
     F --&gt;G{Btn 1 appuye}
     G --&gt;H(Led 8 Hz, 3s)
     H --&gt;I{Btn 1 appuye}
-    I --&gt;B</pre></li>
+    I --&gt;B</pre><script src="/mermaid.min.js"></script><script>mermaid.initialize({"flowchart":{"useMaxWidth":true},"theme":"default"})</script></li>
 </ul>
 </div>
 <h2 id="exercice-4-">Exercice 4 🐛<a class="anchor" href="#exercice-4-">#</a></h2>
