--- a/public/tp/tp_capteur/index.html
+++ b/public/tp/tp_capteur/index.html
@@ -39,7 +39,7 @@ Un capteur de CO2 donnera une tension qui dépend du taux de CO2 dans l’air Ce
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.8b51b15887f54a89b58ea798e77427e378ed67110f0caf26ee96f454a55cd9ea.js" integrity="sha256-i1GxWIf1Som1jqeY53Qn43jtZxEPDK8m7pb0VKVc2eo=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
 
 
 
@@ -353,7 +353,7 @@ Un capteur de CO2 donnera une tension qui dépend du taux de CO2 dans l’air Ce
 <li>Des leds serviront à visualiser la présence de la tension d’alimentation et l’état du capteur.</li>
 <li>Un régulateur de tension sera utilisé pour maintenir la tension d’alimentation à 5 V.</li>
 </ul>
-<p><img src="../../image/principe_fonctionnement_capteur_co2.png" alt="" />
+<p><img src="../../image/principe_fonctionnement_capteur_co2.jpg" alt="" />
 <em>source : pdf consigne du tp</em></p>
 <h2 id="1-led-présence-de-tension">1. Led présence de tension<a class="anchor" href="#1-led-pr%c3%a9sence-de-tension">#</a></h2>
 <p>Pour ce faire, nous commençons par ajouter un <strong>régulateur de tension 5V</strong>.</p>
