--- a/public/idee/index.html
+++ b/public/idee/index.html
@@ -10,7 +10,7 @@ https://github.com/alex-shpak/hugo-book
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Les Idées#Bonjour voici la première page sur les Idées à réalisé dans le futur Je ne sais pas si ils sont tous réalisable, à ma porter ou interressant mais je note quand même
 Voici la liste :
-capteur piezo enregistrer du son autre fonctionalitées guitare solution de cartographie (kinect ?) capteur de température du pico radio badge flipper ? petite voiture (la base) additioneur de chiffre en porte logique luminosité led integrer pico ? R Pico avec vs code en C et microPython bras de robot jeu de la vie jeu du démineur jeu du solitaire &#43; bot ? led comme capteur de lumière utiliser le Pico ePaper ">
+capteur piezo enregistrer du son autre fonctionalitées guitare solution de cartographie (kinect ?) capteur de température du pico radio badge flipper ? petite voiture (la base) additioneur de chiffre en porte logique luminosité led integrer pico ? R Pico avec vs code en C et microPython bras de robot jeu de la vie jeu du démineur jeu du solitaire &#43; bot ? led comme capteur de lumière utiliser le Pico ePaper kali test outil metal detector ">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
 <meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/idee/">
@@ -18,7 +18,7 @@ capteur piezo enregistrer du son autre fonctionalitées guitare solution de cart
   <meta property="og:title" content="Les Idées">
   <meta property="og:description" content="Les Idées#Bonjour voici la première page sur les Idées à réalisé dans le futur Je ne sais pas si ils sont tous réalisable, à ma porter ou interressant mais je note quand même
 Voici la liste :
-capteur piezo enregistrer du son autre fonctionalitées guitare solution de cartographie (kinect ?) capteur de température du pico radio badge flipper ? petite voiture (la base) additioneur de chiffre en porte logique luminosité led integrer pico ? R Pico avec vs code en C et microPython bras de robot jeu de la vie jeu du démineur jeu du solitaire &#43; bot ? led comme capteur de lumière utiliser le Pico ePaper">
+capteur piezo enregistrer du son autre fonctionalitées guitare solution de cartographie (kinect ?) capteur de température du pico radio badge flipper ? petite voiture (la base) additioneur de chiffre en porte logique luminosité led integrer pico ? R Pico avec vs code en C et microPython bras de robot jeu de la vie jeu du démineur jeu du solitaire &#43; bot ? led comme capteur de lumière utiliser le Pico ePaper kali test outil metal detector">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -26,8 +26,8 @@ capteur piezo enregistrer du son autre fonctionalitées guitare solution de cart
   <meta itemprop="name" content="Les Idées">
   <meta itemprop="description" content="Les Idées#Bonjour voici la première page sur les Idées à réalisé dans le futur Je ne sais pas si ils sont tous réalisable, à ma porter ou interressant mais je note quand même
 Voici la liste :
-capteur piezo enregistrer du son autre fonctionalitées guitare solution de cartographie (kinect ?) capteur de température du pico radio badge flipper ? petite voiture (la base) additioneur de chiffre en porte logique luminosité led integrer pico ? R Pico avec vs code en C et microPython bras de robot jeu de la vie jeu du démineur jeu du solitaire &#43; bot ? led comme capteur de lumière utiliser le Pico ePaper">
-  <meta itemprop="wordCount" content="109">
+capteur piezo enregistrer du son autre fonctionalitées guitare solution de cartographie (kinect ?) capteur de température du pico radio badge flipper ? petite voiture (la base) additioneur de chiffre en porte logique luminosité led integrer pico ? R Pico avec vs code en C et microPython bras de robot jeu de la vie jeu du démineur jeu du solitaire &#43; bot ? led comme capteur de lumière utiliser le Pico ePaper kali test outil metal detector">
+  <meta itemprop="wordCount" content="114">
 
 <title>Les Idées | Tori</title>
 <link rel="icon" href="/favicon.png" >
@@ -37,7 +37,7 @@ capteur piezo enregistrer du son autre fonctionalitées guitare solution de cart
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f872152eaf00a3e69e7a71e177ef4719e8d2c4151c4aa0b661cf8cfd43350f1f.js" integrity="sha256-&#43;HIVLq8Ao&#43;aeenHhd&#43;9HGejSxBUcSqC2Yc&#43;M/UM1Dx8=" crossorigin="anonymous"></script>
 
 
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/idee/index.xml" title="Tori" />
@@ -133,7 +133,7 @@ capteur piezo enregistrer du son autre fonctionalitées guitare solution de cart
   
     <input type="checkbox" id="section-6af9fb9e0ae84ba52a61c86504551d63" class="toggle"  />
     <label for="section-6af9fb9e0ae84ba52a61c86504551d63" class="flex">
-      <a href="/projet/" class="">
+      <a role="button" class="">
         Les Projets</a>
       <img src="/icons/chevron-right.svg" class="book-icon" alt="Expand" />
     </label>
@@ -362,6 +362,8 @@ Je ne sais pas si ils sont tous réalisable, à ma porter ou interressant mais j
 </li>
 <li>led comme capteur de lumière</li>
 <li>utiliser le Pico ePaper</li>
+<li>kali test outil</li>
+<li>metal detector</li>
 </ul>
 </article>
  
@@ -401,8 +403,8 @@ Je ne sais pas si ils sont tous réalisable, à ma porter ou interressant mais j
     </span>
     <span>
     
-      <a href="/projet/" class="flex align-center">
-        <span>Les Projets</span>
+      <a href="/projet/hellopico/" class="flex align-center">
+        <span>Hello Pico</span>
         <img src="/icons/forward.svg" class="book-icon" alt="Forward" />
       </a>
     
