--- a/public/projet/hellopico/index.html
+++ b/public/projet/hellopico/index.html
@@ -38,7 +38,7 @@ LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void l
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f872152eaf00a3e69e7a71e177ef4719e8d2c4151c4aa0b661cf8cfd43350f1f.js" integrity="sha256-&#43;HIVLq8Ao&#43;aeenHhd&#43;9HGejSxBUcSqC2Yc&#43;M/UM1Dx8=" crossorigin="anonymous"></script>
 
 
 
@@ -133,7 +133,7 @@ LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void l
   
     <input type="checkbox" id="section-6af9fb9e0ae84ba52a61c86504551d63" class="toggle" checked />
     <label for="section-6af9fb9e0ae84ba52a61c86504551d63" class="flex">
-      <a href="/projet/" class="">
+      <a role="button" class="">
         Les Projets</a>
       <img src="/icons/chevron-right.svg" class="book-icon" alt="Expand" />
     </label>
@@ -395,9 +395,9 @@ LED#int i = 0; void setup() { pinMode(25, OUTPUT); Serial.begin(9600); } void l
   <div class="flex flex-wrap justify-between">
     <span>
     
-      <a href="/projet/" class="flex align-center">
+      <a href="/idee/" class="flex align-center">
         <img src="/icons/backward.svg" class="book-icon" alt="Backward" />
-        <span>Les Projets</span>
+        <span>Les Idées</span>
       </a>
     
     </span>
