--- a/public/tp/tp1/index.html
+++ b/public/tp/tp1/index.html
@@ -42,7 +42,7 @@ int compt; // nm clic btn int led1; int led2; int led3; void setup() { Serial.be
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f872152eaf00a3e69e7a71e177ef4719e8d2c4151c4aa0b661cf8cfd43350f1f.js" integrity="sha256-&#43;HIVLq8Ao&#43;aeenHhd&#43;9HGejSxBUcSqC2Yc&#43;M/UM1Dx8=" crossorigin="anonymous"></script>
 
 
 
@@ -137,7 +137,7 @@ int compt; // nm clic btn int led1; int led2; int led3; void setup() { Serial.be
   
     <input type="checkbox" id="section-6af9fb9e0ae84ba52a61c86504551d63" class="toggle"  />
     <label for="section-6af9fb9e0ae84ba52a61c86504551d63" class="flex">
-      <a href="/projet/" class="">
+      <a role="button" class="">
         Les Projets</a>
       <img src="/icons/chevron-right.svg" class="book-icon" alt="Expand" />
     </label>
@@ -723,7 +723,8 @@ c&rsquo;est à dire qu&rsquo;on a :</p>
 </span></span><span style="display:flex;"><span>    <span style="color:#57c7ff">digitalWrite</span>(<span style="color:#ff9f43">28</span>, HIGH);  
 </span></span><span style="display:flex;"><span>  }
 </span></span><span style="display:flex;"><span>
-</span></span><span style="display:flex;"><span>}</span></span></code></pre></div></article>
+</span></span><span style="display:flex;"><span>}</span></span></code></pre></div><p>i</p>
+</article>
  
       
 
