--- a/public/brouillon/index.html
+++ b/public/brouillon/index.html
@@ -44,7 +44,7 @@ Et d’autre moins#Left Content#Lorem markdownum insigne. Olympo signis Delphi
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.7520bf62fecb06175ff238b4397d33a0d3a29a2a44ba20c3fd0fcf6d67b97571.js" integrity="sha256-dSC/Yv7LBhdf8ji0OX0zoNOimipEuiDD/Q/PbWe5dXE=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f872152eaf00a3e69e7a71e177ef4719e8d2c4151c4aa0b661cf8cfd43350f1f.js" integrity="sha256-&#43;HIVLq8Ao&#43;aeenHhd&#43;9HGejSxBUcSqC2Yc&#43;M/UM1Dx8=" crossorigin="anonymous"></script>
 
 
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/brouillon/index.xml" title="Tori" />
@@ -140,7 +140,7 @@ Et d’autre moins#Left Content#Lorem markdownum insigne. Olympo signis Delphi
   
     <input type="checkbox" id="section-6af9fb9e0ae84ba52a61c86504551d63" class="toggle"  />
     <label for="section-6af9fb9e0ae84ba52a61c86504551d63" class="flex">
-      <a href="/projet/" class="">
+      <a role="button" class="">
         Les Projets</a>
       <img src="/icons/chevron-right.svg" class="book-icon" alt="Expand" />
     </label>
