--- a/public/brouillon/index.html
+++ b/public/brouillon/index.html
@@ -44,7 +44,7 @@ Et d’autre moins#Left Content#Lorem markdownum insigne. Olympo signis Delphi
 
 
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.f872152eaf00a3e69e7a71e177ef4719e8d2c4151c4aa0b661cf8cfd43350f1f.js" integrity="sha256-&#43;HIVLq8Ao&#43;aeenHhd&#43;9HGejSxBUcSqC2Yc&#43;M/UM1Dx8=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.dcaf3c1a9443d6cdd49f0af30bf5c0b40f30b62a22c1cc4675afdd4be0a58c86.js" integrity="sha256-3K88GpRD1s3UnwrzC/XAtA8wtioiwcxGda/dS&#43;CljIY=" crossorigin="anonymous"></script>
 
 
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/brouillon/index.xml" title="Tori" />
